# albu-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  LICENSE  README.md  pyproject.toml  server.json  skills.sh.json
.codex-plugin/: plugin.json
desktop-extension/: .mcpbignore  README.md  manifest.json  pyproject.toml
docs/: ADOPTION.md  ADOPTION_EXPERIMENT.json  ADOPTION_PACKET.md  ADOPTION_TRIAGE_REPORT.md  ARCHIVE.md  BETA_ATTEMPT_CAPTURE_KIT.md  BETA_CAMPAIGN_EXECUTION.md  BETA_CAMPAIGN_PACK.md  BETA_FEEDBACK_INTAKE.md  BETA_FEEDBACK_STATUS.md  BETA_TO_BACKLOG_TRIAGE.md  BETA_VALIDATION_INTAKE.md  BETA_VALIDATION_LOOP.md  BETA_VALIDATION_RECORDING_PACK.md  BETA_VALIDATION_SPRINT.md  BETA_VALIDATION_STATUS.md  BETA_WORKFLOW_PACK.md  CLAUDE_CODE_SETUP_PATH.md  CODEX_CANCELLATION_TRIAGE.md  COMMUNITY_FEEDBACK.md  COMPATIBILITY.md  CONFIGURATION.md  DATASET_QUALITY_DEPTH_PLAN.md  DEMO.md  DISTRIBUTION_READINESS_PACK.md  DISTRIBUTION_ROLLOUT_PACKET.md  EVIDENCE_FIRST_CYCLE_REPORT.md  FIRST_10_MINUTES.md  GOVERNED_100_ITERATION_REPORT.md  GROWTH.md  HOST_ACCEPTANCE.md  HOST_ACCEPTANCE_EVIDENCE.md  HOST_EVIDENCE_CAPTURE_KIT.md  HOST_EVIDENCE_RUNNER.md  HOST_EVIDENCE_SPRINT_BOARD.md  HOST_FAILURE_COOKBOOK.md  HOST_MANUAL_RUNS.json  HOST_MANUAL_RUNS.schema.json  HOST_MATRIX.md  HOST_ONBOARDING_DEPTH_PLAN.md  (+64 more)
evals/: golden_mcp_scenarios.yaml
examples/: classification_pipeline.json  claude_code_preview_command.md  claude_desktop_config.json  claude_desktop_preview_config.json  codex_mcp_config.toml  codex_preview_mcp_config.toml  cursor_mcp_config.json  distortion_review_workflow.md  first_10_minutes_prompt.md  first_preview_workflow.md
mcp-app/: package-lock.json  package.json  preview-review.html  tsconfig.json  vite.config.ts
scripts/: build_desktop_extension.py  check_codex_plugin.py  check_contract_snapshots.py  check_demo_assets.py  check_desktop_extension.py  check_directory_presence.py  check_first_10_minutes.py  check_first_10_minutes_replay.py  check_host_acceptance_report.py  check_host_profile_conformance.py  check_host_proof_sprint.py  check_host_setup_probe.py  check_manual_host_acceptance.py  check_mcp_app_bundle.py  check_mcp_registry_status.py  check_p0_host_run_preflight.py  check_published_package_smoke.py  check_release_readiness.py  check_release_version.py  check_v1_rc_cutover_gate.py  classify_contract_drift.py  export_adoption_packet.py  export_adoption_triage_report.py  export_beta_attempt_capture_kit.py  export_beta_campaign_execution.py  export_beta_campaign_pack.py  export_beta_feedback_intake.py  export_beta_feedback_status.py  export_beta_to_backlog_triage.py  export_beta_validation_intake.py  export_beta_validation_loop.py  export_beta_validation_recording_pack.py  (+78 more)
tests/: __init__.py  (+185 more)
(+249 files in other folders)
